--- a/index.css
+++ b/index.css
@@ -31,6 +31,20 @@
   font-family: "Comic Sans MS", sans-serif;
 }
 
+/* Three image containers (use 25% for four, and 50% for two, etc) */
+.column {
+  float: left;
+  width: 32%;
+  padding: 5px;
+}
+
+/* Clear floats after image containers */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
 body {
   background-image: url('wallpaper.jpg');
   background-repeat: no-repeat;
