--- a/index.css
+++ b/index.css
@@ -95,8 +95,8 @@ body {
 
 /* Caption text */
 .text {
-  color: #f2f2f2;
-  font-size: 15px;
+  color: black;
+  font-size: 25px;
   padding: 8px 12px;
   position: absolute;
   bottom: 8px;
