--- a/index.css
+++ b/index.css
@@ -129,7 +129,7 @@ body {
   background-color: #717171;
 }
 
-/* Fading animation */
+/* Fading animation  plz work*/
 .fade {
   -webkit-animation-name: fade;
   -webkit-animation-duration: 1.5s;
