--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 .box {
   text-align: center;
-  margin-left: 510px;
-  margin-right: 510px;
+  margin-left: 33%;
+  margin-right: 33%;
   padding: 15px;
   background-color: lightsalmon;
   border-radius: 10px;
